# junofy-vst3

./: .gitignore  CMakeLists.txt  Makefile  NOTICE  README.md  THIRD_PARTY_LICENSES
Source/: JunofyEditor.cpp  JunofyEditor.h  JunofyLookAndFeel.cpp  JunofyLookAndFeel.h  JunofyTheme.h  KR106PresetManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Controls/: KR106Keyboard.h  KR106Tooltip.h
Source/DSP/: KR106Chorus.h  KR106Voice.h
tools/vcf-analyze/: vcf_analyze_hw.cpp
